[tool.poetry]
name = "aid"
version = "0.1.0"
description = "AID"
authors = ["b-long <(none)>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = {extras = ["kubernetes"], version = "1.3.1"}
pandas = "^1.4.4"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
